sdk/tests/compilation_tests/records/unnamed_structs.stderr
error: only named fields are allowed in structs
 --> $DIR/unnamed_structs.rs:8:1
  |
8 | struct A(pub i32, pub u32);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
