sdk/tests/compilation_tests/records/unnamed_structs.rs
#![allow(improper_ctypes)]

use marine_rs_sdk::marine;

fn main() {}

#[marine]
struct A(pub i32, pub u32);
